added login and register

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h1>Users</h1>
+<app-nav></app-nav>
 
-<div *ngFor="let item of users">
-  {{ item.id }}
-  {{ item.userName }}
+<div class="container" style="margin-top: 100px">
+  <app-home></app-home>
 </div>
