added state storing and updating

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -34,7 +34,7 @@
         >Welcome {{ (currentUser$ | async)?.userName | titlecase }}</a
       >
       <div class="dropdown-menu" *dropdownMenu style="margin-top: 10px">
-        <a class="dropdown-item"> Edit Profile </a>
+        <a class="dropdown-item" routerLink="/members/edit"> Edit Profile </a>
         <a class="dropdown-item" (click)="logout()"> Logout </a>
       </div>
     </div>
