configured the photo upload, delete and update functionality

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -30,6 +30,7 @@
     </ul>
 
     <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
+      <img [src]="(currentUser$ | async)?.photoUrl" alt="user photo" />
       <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle
         >Welcome {{ (currentUser$ | async)?.userName | titlecase }}</a
       >
