--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,37 +1,86 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form
+  [formGroup]="registerForm"
+  (ngSubmit)="registerForm.valid && register()"
+  autocomplete="off"
+>
   <h2 class="text-center text-primary">Sign up</h2>
   <hr />
-  <div class="mb-3">
-    <input
-      type="text"
-      class="form-control"
-      name="username"
-      [(ngModel)]="model.userName"
-      placeholder="Username"
-    />
-  </div>
-
-  <!-- <div class="mb-3">
-    <label>who is you favorite user? </label>
-    <select class="form-select" *ngIf="Users.length > 0">
-      <option *ngFor="let item of Users" [value]="item.userName">
-        {{ item.userName }}
-      </option>
-    </select>
-  </div> -->
 
   <div class="mb-3">
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      [(ngModel)]="model.password"
-      placeholder="Password"
-    />
+    <label style="margin-right: 10px">I am a:</label>
+    <label class="form-check-label"
+      ><input
+        type="radio"
+        class="form-check-input"
+        value="male"
+        formControlName="gender"
+      />Male</label
+    >
+
+    <label class="form-check-label ms-3"
+      ><input
+        type="radio"
+        class="form-check-input"
+        value="female"
+        formControlName="gender"
+      />female</label
+    >
   </div>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['username'])"
+    [label]="'Username'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['knownAs'])"
+    [label]="'knownAs'"
+  ></app-text-input>
+
+  <app-date-picker
+    [label]="'Data of birth'"
+    [maxDate]="maxDate"
+    [formControl]="$any(registerForm.controls['dateOfBirth'])"
+  ></app-date-picker>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['city'])"
+    [label]="'city'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['country'])"
+    [label]="'country'"
+  ></app-text-input>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+    [type]="'password'"
+  ></app-text-input>
+
+  <div class="row" *ngIf="validationErrors">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{ error }}
+      </li>
+    </ul>
+  </div>
+
+  <app-text-input
+    [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'ConfirmPassword'"
+    [type]="'password'"
+  ></app-text-input>
 
   <div class="text-center">
-    <button class="btn btn-success me-2" type="submit">Register</button>
+    <button
+      class="btn btn-success me-2"
+      type="submit"
+      [disabled]="!registerForm.valid"
+    >
+      Register
+    </button>
     <button class="btn btn-default" type="button" (click)="cancel()">
       Cancel
     </button>
