added pagination, apis, filteringx and cache for the new code

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -32,7 +32,7 @@
     <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
       <img [src]="(currentUser$ | async)?.photoUrl" alt="user photo" />
       <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle
-        >Welcome {{ (currentUser$ | async)?.userName | titlecase }}</a
+        >Welcome {{ (currentUser$ | async)?.knownAs | titlecase }}</a
       >
       <div class="dropdown-menu" *dropdownMenu style="margin-top: 10px">
         <a class="dropdown-item" routerLink="/members/edit"> Edit Profile </a>
