--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,1 +1,112 @@
-<p>messages works!</p>
+<div class="mb-4 d-flex">
+  <div class="btn-group" name="container">
+    <button
+      class="btn btn-primary"
+      btnRadio="Unread"
+      [(ngModel)]="container"
+      (click)="loadMessages()"
+    >
+      <i class="fa fa-envelope"></i> Unread
+    </button>
+
+    <button
+      class="btn btn-primary"
+      btnRadio="Inbox"
+      [(ngModel)]="container"
+      (click)="loadMessages()"
+    >
+      <i class="fa fa-envelope-open"></i> Inbox
+    </button>
+
+    <button
+      class="btn btn-primary"
+      btnRadio="Outbox"
+      [(ngModel)]="container"
+      (click)="loadMessages()"
+    >
+      <i class="fa fa-paper-plane"></i> Outbox
+    </button>
+  </div>
+</div>
+
+<div class="row" *ngIf="!messages || messages.length === 0">
+  <h3>No messages</h3>
+</div>
+
+<div class="row" *ngIf="messages && messages.length > 0">
+  <table class="table table-hover" style="cursor: pointer">
+    <thead>
+      <tr>
+        <th style="width: 40%">Message</th>
+        <th style="width: 20%">From / to</th>
+        <th style="width: 20%">Sent / Received</th>
+        <th style="width: 20%"></th>
+      </tr>
+    </thead>
+
+    <tbody class="align-middle">
+      <tr
+        [hidden]="loading"
+        *ngFor="let item of messages"
+        routerLink="{{
+          container === 'Outbox'
+            ? '/members/' + item.recipientUsername
+            : '/members/' + item.senderUsername
+        }}"
+        [queryParams]="{ tab: 'Messages' }"
+      >
+        <td>{{ item.content }}</td>
+        <td>
+          <div *ngIf="container === 'Outbox'">
+            <img
+              [src]="item.recipientPhotoUrl || './assets/user.png'"
+              class="img-circle rounded-circle me-2"
+              alt="receipient photos"
+            />
+            <strong>{{ item.recipientUsername | titlecase }}</strong>
+          </div>
+
+          <div *ngIf="container !== 'Outbox'">
+            <img
+              [src]="item.senderPhotoUrl || './assets/user.png'"
+              class="img-circle rounded-circle me-2"
+              alt="receipient photos"
+            />
+            <strong>{{ item.senderUsername | titlecase }}</strong>
+          </div>
+        </td>
+
+        <td>{{ item.messageSend | timeago }}</td>
+        <td>
+          <!-- the stop propogation will stop us from routing to another method -->
+          <button
+            (click)="$event.stopPropagation()"
+            class="btn btn-danger"
+            (click)="deleteMessage(item.id)"
+          >
+            Delete
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div
+  class="d-flex justify-content-center"
+  *ngIf="!loading && pagination && messages && messages.length > 0"
+>
+  <pagination
+    [boundaryLinks]="true"
+    [totalItems]="pagination.totalItems"
+    [itemsPerPage]="pagination.itemsPerPage"
+    [maxSize]="10"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    previousText="&lsaquo;"
+    nextText="&rsaquo;"
+    firstText="&laquo;"
+    lastText="&raquo;"
+  >
+  </pagination>
+</div>
