--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,11 +1,14 @@
 <div class="card">
   <div class="card-body">
-    <div *ngIf="messages.length === 0">
+    <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
       No Messages yet... say hi using the message box below!
     </div>
 
-    <ul *ngIf="messages.length > 0" class="chat">
-      <li *ngFor="let message of messages">
+    <ul
+      *ngIf="(messageService.messageThread$ | async)!.length > 0"
+      class="chat"
+    >
+      <li *ngFor="let message of messageService.messageThread$ | async">
         <div>
           <span class="chat-image float-end">
             <img
@@ -19,7 +22,7 @@
             <div class="header">
               <small class="text-muted">
                 <span class="fa fa-clock-o">{{
-                  message.messageSend + "Z" | timeago
+                  message.messageSend | timeago
                 }}</span>
                 <span
                   class="text-danger"
@@ -34,7 +37,7 @@
                   *ngIf="
                     message.dateRead && message.senderUsername !== username
                   "
-                  >(read {{ message.dateRead + "Z" | timeago }})</span
+                  >(read {{ message.dateRead | timeago }})</span
                 >
               </small>
             </div>
