--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,13 +1,15 @@
 <div class="card">
-  <div class="card-body">
+  <div
+    class="card-body"
+    #scrollMe
+    style="overflow: scroll; height: 535px"
+    [scrollTop]="scrollMe.scrollHeight"
+  >
     <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
       No Messages yet... say hi using the message box below!
     </div>
 
     <ul
-      #scrollMe
-      style="overflow: scroll; height: 500px"
-      [scrollTop]="scrollMe.scrollHeight"
       *ngIf="(messageService.messageThread$ | async)!.length > 0"
       class="chat"
     >
@@ -67,10 +69,10 @@
         <div class="input-group=append">
           <button
             class="btn btn-primary"
-            [disabled]="!messageForm.valid"
+            [disabled]="!messageForm.valid || loading"
             type="submit"
           >
-            Send
+            Send <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
           </button>
         </div>
       </div>
